--- a/code/parent-root/pom.xml
+++ b/code/parent-root/pom.xml
@@ -19,7 +19,8 @@
         <!-- 版本号管理 -->
         <junit.version>4.12</junit.version>
         <springframework.version>5.0.4.RELEASE</springframework.version>
-        <hibernate.version>5.2.14.Final</hibernate.version>
+        <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
+        <hibernate.version>5.2.16.Final</hibernate.version>
         <security.version>5.0.3.RELEASE</security.version>
         <aspectj.version>1.8.13</aspectj.version>
         <activiti.version>5.22.0</activiti.version>
@@ -79,6 +80,11 @@
                 <version>${springframework.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-jpa</artifactId>
+                <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
