--- a/code/parent-study/study-service/src/main/resources/application-db.properties
+++ b/code/parent-study/study-service/src/main/resources/application-db.properties
@@ -27,8 +27,8 @@ dbcp.minEvictableIdleTimeMillis=3600000
 hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 ###create\update\none
 hibernate.hbm2ddl.auto = none
-hibernate.show_sql = false
-hibernate.format_sql= false
+hibernate.show_sql = true
+hibernate.format_sql= true
 hibernate.generate_statistics=true
 hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
