框架搭建成功

--- a/code/parent-study/study-service/src/main/resources/application-db.properties
+++ b/code/parent-study/study-service/src/main/resources/application-db.properties
@@ -7,7 +7,7 @@
 #\u5f53\u524d\u7cfb\u7edf\u4f7f\u7528\u7684\u6570\u636e\u5e93\u7c7b\u578b\u3002
 database.driver.name=mysql
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/liaowei?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://127.0.0.1:3306/liaowei?useSSL=false&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 jdbc.username=liaowei
 jdbc.password=LiaoWei_4466
 #dbcp settings
