--- a/code/hibernate-framework/pom.xml
+++ b/code/hibernate-framework/pom.xml
@@ -4,28 +4,23 @@
 
     <parent>
         <groupId>com.liaowei</groupId>
-        <artifactId>parent-study</artifactId>
+        <artifactId>parent-root</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>study-service</artifactId>
-    <name>study-service</name>
+
+    <groupId>com.liaowei.framework</groupId>
+    <artifactId>hibernate-framework</artifactId>
+    <name>hibernate-framework</name>
+    <description>数据层hibernate框架扩展</description>
 
     <dependencies>
         <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
         </dependency>
         <dependency>
             <groupId>com.liaowei.framework</groupId>
-            <artifactId>service-framework</artifactId>
+            <artifactId>framework-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
