--- a/code/mvc-framework/pom.xml
+++ b/code/mvc-framework/pom.xml
@@ -9,31 +9,27 @@
     </parent>
 
     <groupId>com.liaowei.framework</groupId>
-    <artifactId>service-framework</artifactId>
-    <name>service-framework</name>
-    <description>服务层spring框架扩展</description>
+    <artifactId>mvc-framework</artifactId>
+    <name>mvc-framework</name>
+    <description>web层spring mvc框架扩展</description>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-dbcp2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.liaowei.framework</groupId>
-            <artifactId>hibernate-framework</artifactId>
+            <artifactId>service-framework</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
         </dependency>
     </dependencies>
 </project>
