--- a/code/parent-root/pom.xml
+++ b/code/parent-root/pom.xml
@@ -20,8 +20,8 @@
         <junit.version>4.12</junit.version>
         <springframework.version>5.0.4.RELEASE</springframework.version>
         <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
+        <spring-security.version>5.0.3.RELEASE</spring-security.version>
         <hibernate.version>5.2.16.Final</hibernate.version>
-        <security.version>5.0.3.RELEASE</security.version>
         <aspectj.version>1.8.13</aspectj.version>
         <activiti.version>5.22.0</activiti.version>
         <servlet.version>3.1.0</servlet.version>
@@ -151,27 +151,27 @@
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-core</artifactId>
-                <version>${security.version}</version>
+                <version>${spring-security.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-config</artifactId>
-                <version>${security.version}</version>
+                <version>${spring-security.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-acl</artifactId>
-                <version>${security.version}</version>
+                <version>${spring-security.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-web</artifactId>
-                <version>${security.version}</version>
+                <version>${spring-security.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-taglibs</artifactId>
-                <version>${security.version}</version>
+                <version>${spring-security.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -242,6 +242,25 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
