--- a/code/parent-root/pom.xml
+++ b/code/parent-root/pom.xml
@@ -27,7 +27,7 @@
         <servlet.version>3.1.0</servlet.version>
         <jsp.version>2.3.1</jsp.version>
         <jstl.version>1.2</jstl.version>
-        <standard.version>1.1.2</standard.version>
+        <standard.version>1.2.5</standard.version>
         <jackson.version>2.9.4</jackson.version>
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
         <commons-io.version>2.6</commons-io.version>
@@ -66,8 +66,8 @@
                 <version>${mysql-connector.version}</version>
             </dependency>
             <dependency>
-                <groupId>taglibs</groupId>
-                <artifactId>standard</artifactId>
+                <groupId>org.apache.taglibs</groupId>
+                <artifactId>taglibs-standard-impl</artifactId>
                 <version>${standard.version}</version>
             </dependency>
             <dependency>
