--- a/code/parent-study/study-web/pom.xml
+++ b/code/parent-study/study-web/pom.xml
@@ -22,8 +22,8 @@
             <artifactId>jstl</artifactId>
         </dependency>
         <dependency>
-            <groupId>taglibs</groupId>
-            <artifactId>standard</artifactId>
+            <groupId>org.apache.taglibs</groupId>
+            <artifactId>taglibs-standard-impl</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-fileupload</groupId>
