--- a/code/parent-platform/platform-web/src/main/resources/application-db.properties
+++ b/code/parent-platform/platform-web/src/main/resources/application-db.properties
@@ -34,9 +34,10 @@ dbcp.minEvictableIdleTimeMillis=3600000
 ############## hibernate \u914d\u7f6e\u4fe1\u606f  begin  #######################
 hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 ###create\update\none
-hibernate.hbm2ddl.auto = none
-hibernate.show_sql = true
-hibernate.format_sql= true
+hibernate.hbm2ddl.auto=none
+hibernate.show_sql=true
+hibernate.format_sql=false
+hibernate.use_sql_comments=true
 hibernate.generate_statistics=true
 hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 ############## hibernate \u914d\u7f6e\u4fe1\u606f  end  #######################
