--- a/code/flyhaze-platform/platform-service/src/main/resources/application-db.properties
+++ b/code/flyhaze-platform/platform-service/src/main/resources/application-db.properties
@@ -1,16 +1,16 @@
 ####################################
-## \u7cfb\u7edf\u914d\u7f6e\u4fe1\u606f
+## \u6570\u636e\u5e93\u8fde\u63a5\u914d\u7f6e\u4fe1\u606f
 ## date\uff1a2018-4-15
 ## email\uff1aliaowei-0627@163.com
 ####################################
-##############  \u6570\u636e\u5e93\u914d\u7f6e mysql  #######################
+##############  \u914d\u7f6e mysql  #######################
 #\u5f53\u524d\u7cfb\u7edf\u4f7f\u7528\u7684\u6570\u636e\u5e93\u7c7b\u578b\u3002
 database.driver.name=mysql
 jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/liaowei
 jdbc.username=liaowei
 jdbc.password=LiaoWei_4466
-jdbc.connectionProperties=useSSL=false;serverTimezone=Asia/Shanghai;useUnicode=true;characterEncoding=utf-8;zeroDateTimeBehavior=convertToNull
+jdbc.connectionProperties=useSSL=false;serverTimezone=Asia/Shanghai;useUnicode=true;characterEncoding=utf-8;zeroDateTimeBehavior=convertToNull;autoReconnect=true
 #dbcp settings
 #\u521d\u59cb\u8fde\u63a5\u6570
 dbcp.initialSize=10
