--- a/code/flyhaze-platform/platform-web/src/main/resources/spring-mvc.properties
+++ b/code/flyhaze-platform/platform-web/src/main/resources/spring-mvc.properties
@@ -1,5 +1,5 @@
 ####################################
-## \u7cfb\u7edf\u914d\u7f6e\u4fe1\u606f
+## spring mvc\u914d\u7f6e\u4fe1\u606f
 ## date\uff1a2018-4-15
 ## email\uff1aliaowei-0627@163.com
 ####################################
